2410 procfs needlessly breaks large file support Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Approved by: Garrett D'Amore <garrett@damore.org>